--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.5.1"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -10,6 +10,29 @@ material = "1.12.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
 
+# hilt
+hilt = "2.51.1"
+
+# ksp
+ksp = "2.0.0-1.0.22"
+
+# lifecycle
+lifecycle = "2.8.3"
+
+# dimens
+dimens = "1.1.1"
+
+# glide
+glide = "4.16.0"
+glide-transformations = "4.3.0"
+
+# room
+room = "2.6.1"
+
+# preference
+preference = "1.2.1"
+
+# core
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -20,7 +43,40 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
+# hilt
+hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", name = "kotlin-compiler", version.ref = "hilt" }
+
+# lifecycle
+lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", name = "lifecycle-viewmodel", version.ref = "lifecycle" }
+lifecycle-livedata = { module = "androidx.lifecycle:lifecycle-livedata-ktx", name = "lifecycle-livedata", version.ref = "lifecycle" }
+
+# dimens
+dimensSp = { module = "com.intuit.ssp:ssp-android", version.ref = "dimens" }
+dimensDp = { module = "com.intuit.sdp:sdp-android", version.ref = "dimens" }
+
+# glide
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-compiler = { module = "com.github.bumptech.glide:compiler", name = "glide-compiler", version.ref = "glide" }
+glide-transformations = { module = "jp.wasabeef:glide-transformations", name = "glide-transformations", version.ref = "glide-transformations" }
+
+# room
+room = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+
+# preference
+androidx-preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
+
+# core
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+
+# hilt
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+
+# ksp
+ksp = {id = "com.google.devtools.ksp", version.ref = "ksp"}
+
 
