--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ ksp = "2.0.0-1.0.22"
 
 # lifecycle
 lifecycle = "2.8.3"
+fragment-ktx = "1.8.1"
 
 # dimens
 dimens = "1.1.1"
@@ -42,6 +43,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment-ktx" }
 
 # hilt
 hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
